profiling-using-exp-runner/backup_FINAL_RESULTS/dft_experiment/run_3_repetition_0/energibridge.log
sampling interval: 200, target function: DFT, input size: 4096
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.dft as module; X = tuple(np.random.random(4096)); module.DFT(X)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 8.016715045928956 for 0.23494145 sec of execution.
